@@ -1,3 +1,8 @@
+2011-06-22  Alan Modra  <amodra@gmail.com>
+
+	* elflink.c (_bfd_elf_merge_symbol): Allow type changes for
+	plugin symbols.  Fix segfault on linker scrip defined syms.
+
 2011-05-29  Alan Modra  <amodra@gmail.com>
 
 	Apply from mainline
